Fix mobile card image position for all card variants
- Override order properties for c-card-right on mobile
- All cards now show image on top consistently
- Fixes alternating card layout issue on mobile

--- a/newstyle.css
+++ b/newstyle.css
@@ -1706,15 +1706,18 @@ formButton{
     grid-template-columns: unset;
   }
   
-  .c-card-image {
+  /* Force all cards to have image on top on mobile */
+  .c-card-image,
+  .c-card-right .c-card-image {
     width: 100%;
     height: 200px;
-    order: 1;
+    order: 1 !important;
   }
   
-  .c-card-content {
+  .c-card-content,
+  .c-card-right .c-card-content {
     width: 100%;
-    order: 2;
+    order: 2 !important;
     padding: 35px 25px;
   }
   
